--- a/components/header.html
+++ b/components/header.html
@@ -1,1 +1,10 @@
-
+<header class="site-header">
+  <div class="container">
+    <h1 class="logo"><a href="#/home">Wally Store</a></h1>
+    <nav class="main-nav">
+      <a href="#/home" data-link>Home</a>
+      <a href="#/pages/about" data-link>About</a>
+      <a href="#/pages/contact" data-link>Contact</a>
+    </nav>
+  </div>
+</header>
