--- a/components/header.html
+++ b/components/header.html
@@ -13,8 +13,9 @@
       <a href="#/pages/privacy" data-link><i class="fas fa-shield-alt"></i> Privacy</a>
       <a href="#/pages/terms" data-link><i class="fas fa-file-contract"></i> Terms</a>
 
+      <!-- Changed from #/cart to #/checkout -->
       <div class="cart-icon">
-        <a href="#/cart" data-link><i class="fas fa-shopping-cart"></i> <span id="cart-counter">0</span></a>
+        <a href="#/checkout" data-link><i class="fas fa-shopping-cart"></i> <span id="cart-counter">0</span></a>
       </div>
     </nav>
   </div>
