--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="container header-container">
-    <h1 class="logo"><a href="#/home" data-link>Wally Store</a></h1>
+    <h1 class="logo"><a href="#/home" data-link>Shopia</a></h1>
 
     <button class="mobile-menu-toggle" aria-label="Open menu"><i class="fas fa-bars"></i></button>
 
